--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -366,11 +366,11 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 	
 	\subsubsection{Class Activity}
 	\paragraph{Klassenbeschreibung}
-	Activity ist eine abstrakte Klasse. Eine Activity ist im Wesentlichen ein Aktivitätserkennungsalgorithmus. Entsprechend des Entwurfsmusters Schablone liefert die Klasse Activity eine vorgefertigte Schablonenmethode DataUpdate. Der Algorithmus zur Aktivitätsanalyse (protected abstract void analyse()) wird nur in konkreten Kindklassen implementiert, was in dem Entwurfsmuster der primitiven Operation entspricht.
+	Activity ist eine abstrakte Klasse. Eine Activity ist im Wesentlichen ein Aktivitätserkennungsalgorithmus. Dabei wird die DataUpdate() Methode implementiert und den Unterklassen zu Verfügung gestellt. Der Algorithmus zur Aktivitätsanalyse (protected abstract void analyse()) wird nur in konkreten Unterklassen implementiert, was in dem Entwurfsmuster der primitiven Operation entspricht.
 	
 	\paragraph{Attribute:}
 	\begin{itemize}
-		\item[+] \textbf{ActivityDone: EventHandler<ActivityArgs>}\\Bei dem EventHandler können sich die ViewModel registrieren Diese werden benachrichtigt, wenn eine Aktivität durchgeführt wurde (Schritt gelaufen, Liegestütze gemacht, etc.). Der EventHandler wird in der Methode analyse() aufgerufen. Als Argument bei der Eventwurf wird ein Objekt des Types ActivityArgs übergeben.
+		\item[+] \textbf{ActivityDone: EventHandler<ActivityArgs>}\\Bei dem EventHandler können sich die ViewModel registrieren. Diese werden benachrichtigt, wenn eine Aktivität durchgeführt wurde (Schritt gelaufen, Liegestütze gemacht, etc.). Der EventHandler wird in der Methode analyse() aufgerufen. Als Argument bei der Eventwurf wird ein Objekt des Types ActivityArgs übergeben.
 		\item [$-$] \textbf{buffer: Queue <DataEventArgs>}\\In der Queue werden die ankommenden Dateneinträge gespeichert. Diese werden nach einander von dem Algorithmus in analyse() verwendet. 
 	\end{itemize}
 	\paragraph{Methoden:}
@@ -378,72 +378,81 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 		\item[+] \textbf{DataUpdate(data: DataEventArgs): void}\\Mit dieser Methode bekommt die Aktivität die neuen Dateneinträge. Dabei ruft die Klasse ActivityManager die Methode auf, wenn sie die neuen Daten bekommt. In dieser Methode wird geschaut, ob sich ein Event bei dem EventHandler ActivityDone registriert hat. Falls ja, wird der Datensatz dem buffer hinugefügt, und der Algorithmus gestartet. Falls nicht, wird der Datensatz ignoriert.
 		\item[\#] \textbf{abstract analyse(): void}\\Der Algorithmus der Aktivitätserkennung wird in dieser Methode ausgeführt. Dabei ist dieser in den Unterklassen implementiert. Er beurteilt nur mithilfe der gesammelten Gyroskop- und Accelerometerdaten, ob das (der Activity entsprechende) Ereignis eingetroffen ist. In diesem Fall feuert er ein Event über den ActivityDone EventHandler. 
 	\end{itemize}
-	\subsubsection{Abstract Class AbstractSitUpActivity}
-	\paragraph{Klassenbeschreibung:}
-	Diese Klasse dient nur zur Gewährleistung der Modularität für den ServiceManager. Alle Kinder dieser Klasse sind verschiedene Algorithmen zur Erkennung von Sit-ups.\\ Es soll nach jedem erkannten Sit-up ein Event gefeuert werden.
-	\subsubsection{Class SitUpActivityThreshold}
-	\paragraph{Klassenbeschreibung:}
-	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung von Sit-ups.
-	\paragraph{Methoden:}
-	\begin{itemize}
-		\item [+]\textbf{<<create>> SitUpActivityThreshold(): void}
-		\item [$-$]\textbf{analyse(): void} Implementierung der Analyse.
-	\end{itemize}
-	\subsubsection{Abstract Class AbstractStepActivity}
+	\subsubsection{Abstract class AbstractStepActivity}
 	\paragraph{Klassenbeschreibung:}
 	Diese Klasse dient nur zur Gewährleistung der Modularität für den ServiceManager. Alle Kinder dieser Klasse sind verschiedene Algorithmen zur Schritterkennung.\\ Es soll immer ein Event gefeuert werden, wenn ein Schritt getätigt wurde.
 	\subsubsection{Class StepActivityActivityThreshold}
 	\paragraph{Klassenbeschreibung:}
-	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung, wann ein Schritt getätigt wurde.
+	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung, wann ein Schritt getätigt wurde. Es handelt sich hierbei um eine Kindklasse der abstrakten Klasse AbstractStepActivity. 
 	\paragraph{Methoden:}
 	\begin{itemize}
-		\item [+]\textbf{<<create>> StepActivityThreshold(): void}
-		\item [$-$]\textbf{analyse(): void} Implementierung der Analyse.
+		\item [+]\textbf{<<create>> StepActivityThreshold(): void}\\Konstruktor der KlasseStepActivityThreshold. Dabei wird der EventHandler ActivityDone initialisiert. 
+		\item [$-$]\textbf{analyse(): void}\\ Implementierung der Analyse für die Schritterkennung. Dabei basiert diese auf dem Threshold Ansatz.  
 	\end{itemize}
 	
-	\subsubsection{Abstract Class AbstractRunningActivity}
+	\subsubsection{Abstract class AbstractRunningActivity}
 	\paragraph{Klassenbeschreibung:}
 	Diese Klasse dient nur zur Gewährleistung der Modularität für den ServiceManager. Alle Kinder dieser Klasse sind verschiedene Algorithmen zur Erkennung, ob der Nutzer läuft oder steht.\\ Es wird immer dann ein Event gefeuert, wenn sich dieser Status ändert.
+	
 	\subsubsection{Class RunningActivityThreshold}
 	\paragraph{Klassenbeschreibung:}
-	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung, ob der Nutzer läuft oder steht.
+	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung, ob der Nutzer läuft oder steht. Es wird nur analysiert, falls sich mindestens ein Event bei dem geerbten EventHandler ActivityDone registriert hat.
 	\paragraph{Methoden:}
 	\begin{itemize}
-		\item [+]\textbf{<<create>> SitUpActivityThreshold(): void}
-		\item [$-$]\textbf{analyse(): void} Implementierung der Analyse.
+		\item [+]\textbf{<<create>> SitUpActivityThreshold(): void}\\Konstruktor der Klasse RunningActivityThreshold. In diesem wird der EventHandler erstellt.
+		\item [$-$]\textbf{analyse(): void}\\Implementierung der Analyse, ob der Nutzter läuft oder steht. Der EventHandler ActivityDone ruft die Events auf, falls sich der Laufstatus ändert. Das bedeutet, wenn der Nutzer anfängt zu laufen, oder aufhört. 
 	\end{itemize}
 	
-	\subsubsection{Abstract Class AbstractPushUpActivity}
+	
+	\subsubsection{Abstract class AbstractPushUpActivity}
 	\paragraph{Klassenbeschreibung:}
 	Diese Klasse dient nur zur Gewährleistung der Modularität für den ServiceManager. Alle Kinder dieser Klasse sind verschiedene Algorithmen zur Erkennung von Push-ups.\\ Es soll immer ein Event gefeuert werden, wenn eine Liegestütze erkannt wurde.
+	
 	\subsubsection{Class PushUpActivityThreshold}
 	\paragraph{Klassenbeschreibung:}
-	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung von Sit-ups.
+	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung von Sit-ups.Es wird nur analysiert, falls sich mindestens ein Event bei dem geerbten EventHandler ActivityDone registriert hat.
 	\paragraph{Methoden:}
 	\begin{itemize}
-		\item [+]\textbf{<<create>> SitUpActivityThreshold(): void}
-		\item [$-$]\textbf{analyse(): void} Implementierung der Analyse.
+		\item [+]\textbf{<<create>> PushUpActivityThreshold(): void}\\Konstruktor der Klasse PushUpActicityThreshold(). In diesem wird der EventHandler ActivityDone instanziiert. 
+		\item [$-$]\textbf{analyse(): void}\\Implementierung der Analyse für die Sit-Up-Erkennung. Dabei werden die Daten aus der Queue Buffer benutzt. Der EventHandler ruft die Events auf, wenn eine Liegestütze gemacht wurde.
 	\end{itemize}
-	
-	\subsubsection{Abstract Class ActivityArgs}
+
+	\subsubsection{Abstract class AbstractSitUpActivity}
 	\paragraph{Klassenbeschreibung:}
-	ActivityArgs werden beim Feuern eines Events mit dem Event übergeben. Das erkannte Ereignis kann durch die ActivityArgs genauer beschrieben werden.  
+	Diese Klasse dient nur zur Gewährleistung der Modularität für den ServiceManager. Alle Kinder dieser Klasse sind verschiedene Algorithmen zur Erkennung von Sit-ups.\\ Es soll nach jedem erkannten Sit-up ein Event gefeuert werden.
+	
+	\subsubsection{Class SitUpActivityThreshold}
+	\paragraph{Klassenbeschreibung:}
+	Diese Klasse beinhaltet den Threshold-Algorithmus für die Erkennung von Sit-ups. Hier wird basierend auf den Daten der Earables der Algorithmus in der Methode analyse() ausgeführt.
+	\paragraph{Methoden:}
+	\begin{itemize}
+		\item [+]\textbf{<<create>> SitUpActivityThreshold(): void}\\Konstruktor der Klasse SitUpActivityThreshold. In dieser wird der EventHandler instanziiert. 
+		\item [$-$]\textbf{analyse(): void}\\ Implementierung der Analyse des Ereignisses. Dabei basiert dieser auf einem Threshold Ansatz. Diese wird nur ausgeführt, falls sich ein Event bei ActivityDone registriert hat.
+	\end{itemize}
+		
+	
+	\subsubsection{Interface ActivityArgs}
+	\paragraph{Schnittstellenbeschreibung:}
+	ActivityArgs werden beim Feuern eines Events mit dem Event übergeben. Das erkannte Ereignis kann durch die ActivityArgs genauer beschrieben werden. Dabei handelt es sich hierbei um eine Schnittstelle. 
+	
 	\subsubsection{Class RunningEventArgs}
 	\paragraph{Klassenbeschreibung:}
 	Ein Event der RunningActivityThreshold sagt entweder aus, dass der Nutzer stoppt, oder, dass er zu laufen beginnt.
 	\paragraph{Attribute:}
 	\begin{itemize}
-		\item[+] \textbf{running: boolean} Dieses Boolean ist genau dann auf wahr gesetzt, wenn der Nutzer zu laufen beginnt.
+		\item[+] \textbf{running: bool}\\ Dieses Attribut ist genau dann auf wahr (true) gesetzt, wenn der Nutzer zu laufen beginnt; falsch (false), wenn der Nutzer stoppt.
 	\end{itemize} 
+
 	\subsubsection{Interface CountableActivityArgs}
 	\paragraph{Schnittstellenbeschreibung:}
 	Diese Schnittstelle spezifiziert alle EventArgs bei Aktivitäten, bei denen gezählt werden kann. Auch wenn momentan keine weiteren EventArgs verwendet werden stärkt diese Struktur die Erweiterbarkeit und Übersichtlichkeit. Falls für zählbare Aktivitäten weitere Argumente angegeben werden sollen, kann dies gebündelt geschehen.
+	
 	\subsubsection{Class PushUpEventArgs}
-	Aktuell gibt es keine relevanten EventArgs bei Push-ups.
+	Aktuell gibt es keine relevanten Argumente bei Push-ups. Dies kann bei einem anderen Algorithmus-Ansatz (siehe Aktivität) der Fall sein. Bei Bedarf kann man der Klasse weitere Attribute geben.
 	\subsubsection{Class StepEventActivity}
-	Aktuell gibt es keine relevanten EventArgs bei der Schritterkennung.
+	Aktuell gibt es keine relevanten Argumente bei der Schritterkennung. Dies kann bei einem anderen Algorithmus-Ansatz (siehe Aktivität) der Fall sein.Bei Bedarf kann man der Klasse weitere Attribute geben.
 	\subsubsection{Class SitUpActivity}
-	Aktuell gibt es keine relevanten EventArgs bei Sit-ups.
+	Aktuell gibt es keine relevanten Argumente bei Sit-ups. Dies kann bei einem anderen Algorithmus-Ansatz (siehe Aktivität) der Fall sein. Bei Bedarf kann man der Klasse weitere Attribute geben.
 	
 
 \subsection{App}
